# solana-multisig

./: .gitignore  README.md  run.sh
client/: Cargo.toml
client/src/: client.rs  error.rs  main.rs  utils.rs
program/: Cargo.toml
program/associated-account/: Cargo.toml
program/associated-account/src/: entrypoint.rs  lib.rs  processor.rs
program/multisig/: Cargo.toml
program/multisig/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/src/: instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: functional.rs
