[package]
name = "solana-multisig-cli"
description = "Solana Multisig Command-line Utility"
authors = ["Alexey Pashinov <pashinov93@gmail.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
borsh = "0.9.1"
clap = "2.33.3"
console = "0.14.0"
home = "0.5.3"
serde_json = "1.0.62"
solana-clap-utils = "1.9"
solana-client = "1.9"
solana-program = "1.9"
solana-sdk = "1.9"
thiserror = "1.0"
yaml-rust = "0.4"

solana-multisig = { version = "0.1", path = "../program", features = ["no-entrypoint"] }

[[bin]]
name = "solana-multisig"
path = "src/main.rs"
