[package]
name = "associated-multisig-account"
version = "0.1.0"
authors = ["Alexey Pashinov Maintainers <pashinov93@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.9"
multisig = { version = "0.1", path = "../multisig", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]
