[package]
name = "multisig"
version = "0.1.0"
authors = ["Alexey Pashinov Maintainers <pashinov93@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3"
borsh = "0.9"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.9"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
